<resources>
    <string name="app_name">The Walking Life</string>
    <string name="title_activity_settings">Settings</string>

    <string name="helloIntro">Hello %s!</string>
    <string name="title_settings">Settings</string>
    <string name="preferences_name">Name</string>
    <string name="label_off">Off</string>
    <string name="label_on">On</string>
    <string name="preferences_enable_notifications">Notifications</string>
    <string name="action_settings">Settings</string>

    <string name="first_run_dialog_title">Welcome!</string>
    <string name="first_run_dialog_save">Save</string>
    <string name="first_run_dialog_intro">Please enter your data below.</string>
    <string name="daily_goal">Daily goal</string>
    <string name="default_daily_goal">10000</string>
    <string name="map">Map</string>
    <string name="action_home">Home</string>
    <string name="action_map">Map</string>
    <string name="action_history">History</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_disabled">GPS Disabled!</string>
    <string name="gps_disabled_dialog_message">Turn on GPS to use the location service.</string>
    <string name="stride">Stride</string>
    <string name="default_stride">0.7874</string>
    <string name="notif_finish_title">Daily goal reached!</string>
    <string name="notif_finish_text">Congratulations! You have reached your daily goal.</string>
    <string name="channel_name">The Walking Life</string>
    <string name="notif_step_service_running">Step counter service running</string>
    <string name="stepdata_row_steps">Steps: %1$s</string>
    <string name="welcome">Welcome!</string>

</resources>
