<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/first_run_dialog_intro"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/firstRunName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preferences_name"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/firstRunDailyGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/daily_goal"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/default_daily_goal" />

    <EditText
        android:id="@+id/firstRunStride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stride"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_stride" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_run_dialog_save" />

</LinearLayout>